--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,25 @@ plugins {
     id 'org.springframework.boot' version '3.1.3'
     id 'io.spring.dependency-management' version '1.1.3'
 }
+dependencies {
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'org.mongodb:mongodb-driver-core:4.10.2'
+    implementation 'org.mongodb:mongodb-driver-sync:4.10.2'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.mysql:mysql-connector-j:8.1.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-web-services:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.1.2'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.2'
+
+
+}
+
 
 group = 'com.cuong02n'
 version = '0.0.1-SNAPSHOT'
@@ -15,18 +34,6 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
-    implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.1.2'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.2'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.1.2'
-    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.1.2'
-    implementation 'org.springframework.boot:spring-boot-starter-web-services:3.1.2'
-    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.1.2'
-    implementation 'com.mysql:mysql-connector-j:8.1.0'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.2'
-}
 
 tasks.named('test') {
     useJUnitPlatform()
