--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bprfl
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=ahasuwemeia
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bprfl
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=bprfl
+spring.data.mongodb.username=root
+spring.data.mongodb.password=ahasuwemeia
+#spring.datasource.username=root
+#spring.datasource.password=ahasuwemeia
 server.port=8080
